--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
   <!-- Swiperスクリプト -->
   <script>
     var swiper = new Swiper('.swiper-container', {
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
       navigation: {
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
