--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <!-- Swiper -->
     <div class="swiper-container">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="mv.jpg" alt="Swiper01"></div>
-        <div class="swiper-slide"><img src="mv2.jpg" alt="Swiper02"></div>
-        <div class="swiper-slide"><img src="mv3.jpg" alt="Swiper03"></div>
+        <div class="swiper-slide"><img src="mv3.png" alt="Swiper01"></div>
+        <div class="swiper-slide"><img src="mv.png" alt="Swiper02"></div>
+        <div class="swiper-slide"><img src="mv2.png" alt="Swiper03"></div>
       </div>
       <!-- swiper ページャー部分 -->
       <div class="swiper-pagination"></div>
