--- a/news.html
+++ b/news.html
@@ -37,7 +37,7 @@
       <h1>news</h1>
       <p>2020.11.11</p>
       <h2>ピノキオ New Album「xxxx」新ビジュアル、ジャケット、商品詳細公開！</h2>
-        <p class="news-mv"><img src="mv.jpg" alt="" ></p>
+        <p class="news-mv"><img src="mv.png" alt="" ></p>
 
         <p>【商品詳細】</p>
         <p>ピノキオ</p>
